# DocPipeline

./: README.md  pyproject.toml
.cursor/plans/: gmail_app_password_setup_8b686610.plan.md  supervisor_agent_orchestrator_ac9d3463.plan.md
IFI Essay tool/: .dockerignore  .env.example  .gitignore  .renderignore  ARCHITECTURE.md  ARTIFACT_MANAGEMENT.md  AUTH_DEBUGGING.md  BACKGROUND_PROCESSING.md  BACKGROUND_PROCESSING_FLOW.md  BILINGUAL_EXTRACTION_UPDATE.md  CLEANUP_SUMMARY.md  COPY_THIS_EXACT_STRING.txt  COPY_THIS_FOR_RENDER.md  CREATE_NEW_KEY_GUIDE.md  CREDENTIALS_UPDATE.md  DEBUG_FLASK.md  DEBUG_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  Dockerfile.flask  EMAIL_SETUP.md  ENV_SETUP.md  ENV_VARIABLES_NEEDED.md  EXTRACTION_ERROR_ANALYSIS.md  FLASK_MIGRATION_COMPLETE.md  FLASK_MIGRATION_PLAN.md  FLASK_SETUP.md  GOOGLE_OCR_IMPLEMENTATION.md  GOOGLE_VISION_API_CHECK.md  GRADE_MIGRATION.md  GROUPING_SYSTEM.md  HOSTING_OPTIONS.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  INDEX.md  LOCAL_TESTING_URLS.md  MAGIC_LINK_SETUP.md  MULTI_ENTRY_PDF_FEATURE.md  NAVIGATE_TO_EXISTING_ACCOUNT.md  (+72 more)
IFI Essay tool/.streamlit/: config.toml
IFI Essay tool/admin/: __init__.py  assignments_service.py  routes.py
IFI Essay tool/archived_test_records/: README.md
essayflow/: .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TESTING_GUIDE.md  app.py  requirements.txt
essayflow/pipeline/: ocr.py  (+8 more)
idp_guardrails_core/: core.py
idp_guardrails_export/: README.txt  idp_guardrails_core.py
(+753 files in other folders)
