[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idp-guardrails-core"
version = "0.1.0"
description = "Deterministic validation and attribution guardrails for document processing"
authors = [{name="Jerry Bony"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["idp_guardrails_core"]

[tool.setuptools.package-data]
idp_guardrails_core = ["reference_data/*.csv"]
